terraform-aws/ec2.tf
data "aws_ssm_parameter" "al2023_ami" {
  name = "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64"
}

resource "aws_key_pair" "deployer" {
  key_name   = "${var.project_name}-key"
  public_key = file(pathexpand(var.ssh_public_key_path))
}

resource "aws_instance" "app" {
  ami                         = data.aws_ssm_parameter.al2023_ami.value
  instance_type               = var.instance_type
  subnet_id                   = data.aws_subnets.default.ids[0]
  vpc_security_group_ids      = [aws_security_group.app_sg.id]
  iam_instance_profile        = aws_iam_instance_profile.ec2_profile.name
  key_name                    = aws_key_pair.deployer.key_name
  associate_public_ip_address = true

  user_data = templatefile("${path.module}/templates/user_data.sh.tpl", {
    aws_region         = var.aws_region
    mongo_secret_name  = aws_secretsmanager_secret.mongo_credentials.name
    ecr_backend_image  = "${aws_ecr_repository.backend_ecr_repo.repository_url}:${var.backend_image_tag}"
    ecr_frontend_image = "${aws_ecr_repository.frontend_ecr_repo.repository_url}:${var.frontend_image_tag}"
    git_repo_url       = var.app_repo_url
    s3_bucket_name     = aws_s3_bucket.mongo_backups.bucket
  })

  tags = {
    Name = "${var.project_name}-ec2"
  }
}
